3.5
	+ Merge zentyal-users and zentyal-samba in a single package
	+ Added EBox::Samba::User::hasValue to check if a certain value is present
	+ Do not duplicate cloud ops when REST call fails
	+ Use samba instead of slapd + heimdal
	+ Create a container CN=Groups when provisioning as DC
	+ Set gidNumber for new users to Domain Users to have NSS + PAM working
	+ Set gidNumber based on RID for new groups
	+ Set gidNumber to Domain Users and Domain Admin for NSS + PAM
	+ Change default group container to cn=Users as Windows does
	+ Include PAM + NSS services with SSSd to authenticate LDB users
	  in the system
	+ New EBox::Module::LDAP replacing EBox::LdapModule and using
	  EBox::Module::Service as base class, schemas are now loaded
	  in _regenConfig instead of manually in enableActions
	+ Display message when creating a user which username has more
	  than 20 characters
	+ Fixed error when editing user email address when mail module is
	  not installed
	+ Fix domain controllers shown on the computers OU in Manage model
	+ Using paged serch in EBox::Samba::users() method
	+ Added EBox::LDAPBase::pagedSearch method
	+ Added support for addon components when user is in a
	  non-standard OU
	+ Better control for edit user quota
	+ Sent zentyal-usercorner trigger on install / upgrade to restart it if
	  it's installed
	+ Avoid apparmor errors in trusty
	+ Set version to 3.5
	+ Fixed bug when altering mail address through the edit user form
	+ Better integration between mail addon and mail field
	+ Remove method canonicalName and use object DNs for greater performance
	+ Migrate previous configuration from 3.3 when upgrading
3.4
	+ Updated EBox::Samba::Model::Password to use
	  EBox::Usercorner::updateSessionPassword method and the new samba
	  location
	+ Stop changing users and contacts' cn field on object edition, allowed to
	  edit the displayName field, just as Windows does
	+ Disable OpenLDAP users sync in favor of Samba AD replication