@@ -178,7 +178,7 @@ S-1-5-21-\d+-\d+-\d+-513$
 
 # User: Administrator
 #   Built-in account for administering the computer/domain
-S-1-5-21-\d+-\d+-\d+-500$
+#S-1-5-21-\d+-\d+-\d+-500$
 
 # User: Guest
 #   Built-in account for guest access to the computer/domain
