@@ -1,4 +1,5 @@
 3.5
+	+ Show Administrator account in the UI so it can be handled from Zentyal
 	+ Merge zentyal-users and zentyal-samba in a single package
 	+ Added EBox::Samba::User::hasValue to check if a certain value is present
 	+ Do not duplicate cloud ops when REST call fails
